# python-nta-gtfs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
nta_gtfs/: __init__.py  _streaming.py  exceptions.py  gtfs_picker.py  gtfs_rt.py  static_gtfs.py
tests/: test_gtfs_picker_client.py  test_gtfs_rt_client.py  test_static_gtfs_client.py
