[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nta-gtfs"
version = "0.5.0"
description = "Async Python client for NTA GTFS real-time and static feeds"
authors = [{name = "Niall O'Callaghan", email = "niallwocallaghan@gmail.com"}]
keywords = ["gtfs", "nta", "transit", "realtime", "async", "aiohttp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp>=3.9",
    "gtfs-realtime-bindings>=2.1.0",
]

[project.urls]
"Source Code" = "https://github.com/nocalla/nta-gtfs"
"Bug Tracker" = "https://github.com/nocalla/nta-gtfs/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nta_gtfs"]

[tool.hatch.build.targets.sdist]
exclude = [".claude", ".github", ".vscode", ".python-version"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=nta_gtfs --cov-fail-under=90"
